# Gstremear-Denemeleri

./: CMakeLists.txt  basic  basic4  basictutorial3  gstreamerTest  gstremaer_udp  internalwebcam.cpp  main.c  main.out  manuelhelloworld  udpcalisan  udpconnectionwebcam.cpp  udpconnectionwebcam.h  udpconnectionwebcam.py  udpsink  udpsinkcalisan.c  udpsinkcalisancpp  udpsinknew.cpp  usbcam  usbcam_encode_mp4  usbcam_encode_mp4.c  v4lsrcornek  video_udp_opencv.cpp  video_udp_opencv_chatgpt.cpp  videoudpopencv  videoudpopencvchatgpt  webcam-stream  webcam-udp-stream  webcam.c  webcamudp.c  webcamudpnew.c
